--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@files-ui/react": "^1.2.4",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
+    "multer": "^1.4.5-lts.1",
     "postgres": "^3.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
