--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@files-ui/react": "^1.2.4",
+    "@fontsource-variable/inter": "^5.0.20",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
@@ -25,7 +26,11 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^4.2.0",
+    "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.10",
     "nodemon": "^3.0.1",
+    "postcss": "^8.4.40",
+    "tailwindcss": "^3.4.7",
     "vite": "^5.0.2"
   }
 }
