--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vite-express": "*"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.13",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^4.2.0",
