Implement database seeding with test users and TheMealDB recipes

--- a/.env.sample
+++ b/.env.sample
@@ -9,3 +9,6 @@ PGPASSWORD=null
 PGHOST=localhost
 PGPORT=5432
 PGDATABASE=recipe-app-db
+
+# Seed Database. Set to TRUE to setup the database with fake data.
+SEED_DATABASE=true
