--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@files-ui/react": "^1.2.4",
     "@fontsource-variable/inter": "^5.0.20",
     "bcrypt": "^5.1.1",
@@ -29,8 +30,12 @@
     "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.20",
     "daisyui": "^4.12.10",
+    "eslint": "^9.9.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react": "^7.35.0",
     "nodemon": "^3.0.1",
     "postcss": "^8.4.40",
+    "prettier": "^3.3.3",
     "tailwindcss": "^3.4.7",
     "vite": "^5.0.2"
   }
