--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.25.1",
+    "sqlite3": "^5.1.7",
     "vite-express": "*"
   },
   "devDependencies": {
